ansible ngnix redirect

--- a/ansible/roles/static_web_app/files/nginx.conf
+++ b/ansible/roles/static_web_app/files/nginx.conf
@@ -1,9 +1,22 @@
 server {
-        listen 80 default_server;
-        root /var/www/static_web_app;
-        server_name _;
+    listen 80;
+    server_name localhost;
+    location / {
+                root /var/www/static_web_app;
+                index index.html index.htm;
+    }
+}
+server {
+    listen 80;
+    listen 443 ssl;
+    server_name localhost;
+    ssl_certificate /etc/ssl/certs/localhost.crt;
+    ssl_certificate_key /etc/ssl/private/localhost.key;
+    location / {
+                root /var/www/static_web_app;
+                index index.html index.htm;
+    }
+    if ($scheme != "https") {
         return 301 https://$host$request_uri;
-        location / {
-                try_files $uri $uri/ =404;
-        }
+    }
 }
