--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,11 @@
-ansible==2.8.19
-asn1crypto==0.24.0
-bcrypt==3.1.4
-cffi==1.11.5
-cryptography==2.8
-enum34==1.1.6
-idna==2.7
-ipaddress==1.0.22
-Jinja2==2.10
-MarkupSafe==1.1.0
-paramiko==2.4.2
-pyasn1==0.4.4
-pycparser==2.19
-PyNaCl==1.3.0
-PyYAML==3.13
-six==1.11.0
+ansible==5.7.0
+ansible-core==2.12.5
+cffi==1.15.0
+cryptography==37.0.1
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+packaging==21.3
+pycparser==2.21
+pyparsing==3.0.8
+PyYAML==6.0
+resolvelib==0.5.4
