--- a/ansible/roles/static_web_app/files/nginx.conf
+++ b/ansible/roles/static_web_app/files/nginx.conf
@@ -3,7 +3,7 @@ server {
     server_name localhost;
     location / {
                 root /var/www/static_web_app;
-                index index.html;
+                index index.html test.html;
     }
 }
 server {
@@ -14,7 +14,7 @@ server {
     ssl_certificate_key /etc/ssl/private/localhost.key;
     location / {
                 root /var/www/static_web_app;
-                index index.html;
+                index index.html test.html;
     }
     if ($scheme != "https") {
         return 301 https://$host$request_uri;
