--- a/ansible/roles/static_web_app/files/nginx.conf
+++ b/ansible/roles/static_web_app/files/nginx.conf
@@ -3,7 +3,11 @@ server {
     server_name localhost;
     location / {
                 root /var/www/static_web_app;
-                index index.html test.html;
+                index index.html;
+    }
+    location /test {
+                root /var/www/static_web_app;
+                index test.html;
     }
 }
 server {
@@ -14,8 +18,11 @@ server {
     ssl_certificate_key /etc/ssl/private/localhost.key;
     location / {
                 root /var/www/static_web_app;
-                index index.html test.html;
+                index index.html;
     }
+    location /test {
+                root /var/www/static_web_app;
+                index test.html;
     if ($scheme != "https") {
         return 301 https://$host$request_uri;
     }
