--- a/ansible/roles/static_web_app/files/nginx.conf
+++ b/ansible/roles/static_web_app/files/nginx.conf
@@ -1,12 +1,11 @@
 server {
     listen 80;
     server_name localhost;
+    root /var/www/static_web_app;
     location / {
-                root /var/www/static_web_app;
                 index index.html;
     }
-    location /test {
-                root /var/www/static_web_app;
+    location /test/ {
                 index test.html;
     }
 }
@@ -16,13 +15,13 @@ server {
     server_name localhost;
     ssl_certificate /etc/ssl/certs/localhost.crt;
     ssl_certificate_key /etc/ssl/private/localhost.key;
+    root /var/www/static_web_app;
     location / {
-                root /var/www/static_web_app;
                 index index.html;
     }
-    location /test {
-                root /var/www/static_web_app;
+    location /test/ {
                 index test.html;
+    }
     if ($scheme != "https") {
         return 301 https://$host$request_uri;
     }
