--- a/ansible/roles/static_web_app/tasks/main.yml
+++ b/ansible/roles/static_web_app/tasks/main.yml
@@ -44,7 +44,13 @@
     src: /etc/nginx/sites-available/nginx.conf
     dest: /etc/nginx/sites-enabled/default
     state: link
-    
+
+- name: Create test directory
+  file:
+    path: /var/www/static_web_app/test
+    state: directory
+    mode: 0755
+
 - name: Restart Ngnix number
   service:
     name: nginx
